crash when hitting quick favorites key outside of open preferences window #61487

Closed
opened 2019-02-12 22:37:37 +01:00 by Casey Connor · 5 comments

Operating system: Kubuntu 18.10
Graphics card: GeForce GTX 1060 6GB
Broken: 2.80beta, f16763a01d

  • start blender with an empty config directory
  • Edit -> Preferences
  • move mouse over main window (not preferences window), but do not click in main window
  • hit "Q" for quick favorites menu, but not over the preferences window; i.e. mouse is over the main window
  • blender crashes

crash log:

# Blender 2.80 (sub 44), Commit date: 2019-02-12 16:05, Hash f16763a01dfb

# backtrace
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(BLI_system_backtrace+0x1d) [0x1bafced]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x115b7c9]
/lib/x86_64-linux-gnu/libc.so.6(+0x41100) [0x7f65d7324100]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(ED_screen_user_menus_find+0x42) [0x146d452]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x146d4f3]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(UI_menutype_draw+0x49) [0x132b739]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(UI_popup_menu_invoke+0x6d) [0x1336a9d]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x1174ab0]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x116087b]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x11639a6]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x1163c59]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x11646cc]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(wm_event_do_handlers+0x8b8) [0x11653b8]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(WM_main+0x20) [0x115c1d0]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(main+0x30a) [0x10c150a]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f65d730709b]
/path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(_start+0x2a) [0x115818a]

Operating system: Kubuntu 18.10 Graphics card: GeForce GTX 1060 6GB Broken: 2.80beta, f16763a01dfb - start blender with an empty config directory - Edit -> Preferences - move mouse over main window (not preferences window), but do not click in main window - hit "Q" for quick favorites menu, but not over the preferences window; i.e. mouse is over the main window - blender crashes crash log: ``` # Blender 2.80 (sub 44), Commit date: 2019-02-12 16:05, Hash f16763a01dfb # backtrace /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(BLI_system_backtrace+0x1d) [0x1bafced] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x115b7c9] /lib/x86_64-linux-gnu/libc.so.6(+0x41100) [0x7f65d7324100] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(ED_screen_user_menus_find+0x42) [0x146d452] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x146d4f3] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(UI_menutype_draw+0x49) [0x132b739] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(UI_popup_menu_invoke+0x6d) [0x1336a9d] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x1174ab0] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x116087b] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x11639a6] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x1163c59] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender() [0x11646cc] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(wm_event_do_handlers+0x8b8) [0x11653b8] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(WM_main+0x20) [0x115c1d0] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(main+0x30a) [0x10c150a] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f65d730709b] /path/to/beta/blender-2.80-f16763a01dfb-linux-glibc224-x86_64/blender(_start+0x2a) [0x115818a] ```
Author

Added subscriber: @clepsydrae

Added subscriber: @clepsydrae
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-02-13 10:32:54 +01:00
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by 57f0b175d7

This issue was referenced by 57f0b175d7c90886ef61e06a991f15c9e1da723c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61487
No description provided.