Fix T61487: quick favorites crash outside of open preferences window